content/_generated-doc/3.8/config/quarkus-stork.adoc

:summaryTableId: quarkus-stork
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-stork_quarkus-stork-service-configuration-configuration-for-the-service]]link:#quarkus-stork_quarkus-stork-service-configuration-configuration-for-the-service[Configuration for the service]

h|Type
h|Default

a| [[quarkus-stork_quarkus-stork-service-name-service-discovery-type]]`link:#quarkus-stork_quarkus-stork-service-name-service-discovery-type[quarkus.stork."service-name".service-discovery.type]`


[.description]
--
Configures the service discovery type, e.g. "consul". ServiceDiscoveryProvider for the type has to be available

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_STORK__SERVICE_NAME__SERVICE_DISCOVERY_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_STORK__SERVICE_NAME__SERVICE_DISCOVERY_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-stork_quarkus-stork-service-name-service-discovery-params]]`link:#quarkus-stork_quarkus-stork-service-name-service-discovery-params[quarkus.stork."service-name".service-discovery]`


[.description]
--
ServiceDiscovery parameters. Check the documentation of the selected service discovery type for available parameters.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_STORK__SERVICE_NAME__SERVICE_DISCOVERY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_STORK__SERVICE_NAME__SERVICE_DISCOVERY+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-stork_quarkus-stork-service-name-load-balancer-type]]`link:#quarkus-stork_quarkus-stork-service-name-load-balancer-type[quarkus.stork."service-name".load-balancer.type]`


[.description]
--
Configures load balancer type, e.g. "round-robin". A LoadBalancerProvider for the type has to be available

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_STORK__SERVICE_NAME__LOAD_BALANCER_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_STORK__SERVICE_NAME__LOAD_BALANCER_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`round-robin`


a| [[quarkus-stork_quarkus-stork-service-name-load-balancer-parameters]]`link:#quarkus-stork_quarkus-stork-service-name-load-balancer-parameters[quarkus.stork."service-name".load-balancer]`


[.description]
--
Load Balancer parameters. Check the documentation of the selected load balancer type for available parameters

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_STORK__SERVICE_NAME__LOAD_BALANCER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_STORK__SERVICE_NAME__LOAD_BALANCER+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


h|[[quarkus-stork_quarkus-stork-service-name-service-registrar-serviceregistrar-configuration-for-the-service]]link:#quarkus-stork_quarkus-stork-service-name-service-registrar-serviceregistrar-configuration-for-the-service[ServiceRegistrar configuration for the service]
This configuration section is optional
h|Type
h|Default

a| [[quarkus-stork_quarkus-stork-service-name-service-registrar-type]]`link:#quarkus-stork_quarkus-stork-service-name-service-registrar-type[quarkus.stork."service-name".service-registrar.type]`


[.description]
--
Configures service registrar type, e.g. "consul". A ServiceRegistrarProvider for the type has to be available

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_STORK__SERVICE_NAME__SERVICE_REGISTRAR_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_STORK__SERVICE_NAME__SERVICE_REGISTRAR_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-stork_quarkus-stork-service-name-service-registrar-parameters]]`link:#quarkus-stork_quarkus-stork-service-name-service-registrar-parameters[quarkus.stork."service-name".service-registrar]`


[.description]
--
Service Registrar parameters. Check the documentation of the selected registrar type for available parameters

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_STORK__SERVICE_NAME__SERVICE_REGISTRAR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_STORK__SERVICE_NAME__SERVICE_REGISTRAR+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|

|===